updated issue#1 with logo being huge on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,7 +189,7 @@ code{background-color:#333;border-radius:3px;margin-bottom:30px;display:block;pa
     .blog-post .feature-img{height:400px}
 }
 @media only screen and (max-width:767px){
-    .site-header .header-main .logo{width:10%;width:calc(100% - 30px)}
+    .site-header .header-main .logo{width:10%;width:calc(15% - 30px)}
     .site-header .header-main{flex-wrap:wrap;align-items:center;justify-content:flex-start}
     .site-header .header-main .menu{position:fixed;top:0;right:-100%;bottom:0;width:100%;z-index:1;background:#000000c9;z-index:999;padding:80px 0 0 0;-webkit-transition:0.3s all;transition:0.3s all}
     .site-header.active .logo{z-index:9999}
@@ -204,7 +204,7 @@ code{background-color:#333;border-radius:3px;margin-bottom:30px;display:block;pa
     h1,
     .h1{font-size:32px}
     h2{font-size:24px;line-height:30px}
-    .responsive-menu{display:flex;float:right}
+    .responsive-menu{display:flex;float:left}
     .site-header .header-main .menu ul li a{padding:6px 20px;display:inline-block;width:100%;border-bottom:1px solid #fff;box-sizing:border-box;font-size:14px}
 }
 @media only screen and (max-width:568px){
